# poca-loop

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 202605210001_initial_mvp.py  202605210002_matching_indexes.py  202605210003_release_source_metadata.py  202605210004_pending_photocards.py  202605210005_pending_photocard_rejection.py  202605210006_pending_photocard_approval.py  202605220001_pending_photocard_merge.py
app/: main.py
app/api/: deps.py  errors.py
app/api/v1/: admin.py  auth.py  catalog.py  explore.py  matches.py  router.py  templates.py  user_cards.py
app/core/: config.py  security.py
app/db/: seed.py
app/models/: catalog.py  user_card.py  users.py
app/schemas/: auth.py  catalog.py  explore.py  matching.py  user_card.py
app/services/: matching.py  template_svg.py
docs/: demo-scenario.md
docs/screenshots/: README.md
frontend/: .dockerignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/components/: app-layout.tsx  card-form.tsx  card-item.tsx  condition-guide.tsx  state-blocks.tsx
frontend/src/lib/: api.ts  auth.ts  release-source.ts  trade-proposal.ts
frontend/src/pages/: admin-pending-photocards.tsx  haves.tsx  (+7 more)
tests/: conftest.py  test_admin_pending_photocards.py  test_auth.py  test_catalog_and_user_cards.py  test_direct_matches.py  test_explore_cards.py  test_public_readiness.py  test_template_svg.py  test_three_way_matches.py
(+8 files in other folders)
