[project]
name = "poca-loop"
version = "0.1.0"
description = "K-POP photocard trade matching backend MVP"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.5.2",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.9",
    "pwdlib[argon2]>=0.2.1",
    "redis>=5.1.0",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
